--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ p{
     box-shadow: 10px 10px 40px orange;
     border-radius: 5px;
     height: 80%;
+    padding: 2%;
 }
 .experience-area{
     background-image: url("images/exp-bg.png");
